<resources>
    <string name="app_name">AARZU</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_contactus">Contact Us</string>
    <string name="action_home">Home</string>
    <string name="action_developer">Developed By</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password needs minimum 8 characters with 1 Number - 1 Special character </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_aboutus">About Us</string>
    <string name="nav_item_contactus">Contact Us</string>
    <string name="nav_item_developedby">Developed By</string>
    <string name="nav_item_signout">Sign Out</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_aboutus</item>
        <item>@string/nav_item_contactus</item>
        <item>@string/nav_item_developedby</item>
        <item>@string/nav_item_signout</item>
    </string-array>

    <string name="title_aboutus">About Us</string>
    <string name="title_contactus">Contact Us</string>
    <string name="title_developedby">Developed By</string>
    <string name="title_sign_out">Sign Out</string>

</resources>
